--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,299 @@
 </head>
 <title>Prengi</title>
 <body>
-
+    <section class="countrys">
+        <div class="container">
+            <div class="countrys__icons">
+                <div class="countrys__icon">
+                    <img src="icons/countries/uk.png" alt="Ukraine">
+                    <div class="countrys__text">
+                        <div class="countrys__title">Ukraine</div>
+                        <a href="tel:+3806393007002" class="countrys__phone">tel. +38(063) 930 07 002</a>
+                        <a href="mailto:hi@vasolutions.com.ua" class="countrys__mail">hi@vasolutions.com.ua</a>
+                    </div>
+                </div>
+                <div class="countrys__icon">
+                    <img src="icons/countries/germany.png" alt="Germany">
+                    <div class="countrys__text">
+                        <div class="countrys__title">Germany</div>
+                        <div class="countrys__addres">Trierer Strabe 35, 54329 Konz</div>
+                        <a href="tel:+352661880305" class="countrys__phone">tel. +352 661 88 03 05</a>
+                    </div>
+                </div>
+                <div class="countrys__icon">
+                    <img src="icons/countries/estonia.png" alt="Estonia">
+                    <div class="countrys__text">
+                        <div class="countrys__title">Estonia</div>
+                        <div class="countrys__addres">K. Karbery 16/27, 13812 Tallinn</div>
+                        <a href="tel:+352661880305" class="countrys__phone">tel. +352 661 88 03 05</a>
+                    </div>
+                </div>
+                <div class="countrys__icon">
+                    <img src="icons/countries/britain.png" alt="Britain">
+                    <div class="countrys__text">
+                        <div class="countrys__title">Great Britain</div>
+                        <div class="countrys__addres">E20LP, Golden vc House, London</div>
+                        <a href="tel:+447501095529" class="countrys__phone">tel. +44 750 109 55 29</a>
+                    </div>
+                </div>
+                <div class="countrys__icon">
+                    <img src="icons/countries/lexumbourg.png" alt="Luxembourg">
+                    <div class="countrys__text">
+                        <div class="countrys__title">Luxembourg</div>
+                        <div class="countrys__addres">2,Rue d`Avalon, L-1159 Luxembourg</div>
+                        <a href="tel:+352661880305" class="countrys__phone">tel. +352 661 88 03 05</a>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </section>
+    <section class="menu">
+        <div class="container">
+            <div class="menu__header">
+                <img src="img/logo_menu.png" alt="logo" class="menu__logo">
+                <ul>
+                    <li>главная</li>
+                    <li>Модули</li>
+                    <li>Отрасли</li>
+                    <li>О нас</li>
+                    <li>Наши обязательства</li>
+                </ul>
+            </div>
+            <div class="menu__wrapper">
+                <div class="menu__block">
+                    <h1 class="menu__title">Управляй своим бизнесом<br> через Smartphone</h1>
+                    <div class="menu__subtitle">
+                    PRENGI - Платформа для прозрачного<br>
+                    управления бизнесом
+                    </div>
+                    <button class="button">Получить доступ</button>
+                </div>
+                <div class="menu__next">
+                    <img src="img/next.png" alt="next">
+                </div>
+                <img src="img/mobile.png" alt="mobile" class="menu__mobile">
+            </div>
+        </div>
+    </section>
+    <section class="prengi">
+        <div class="container">
+            <div class="prengi__icons">
+                <div class="prengi__icon">
+                    <img src="img/efficiency.png" alt="" class="prengi__img">
+                    <div class="prengi__header">Нет оперативности<br> в принятии решений?</div>
+                </div>
+                <div class="prengi__icon">
+                    <img src="img/accounting.png" alt="" class="prengi__img">
+                    <div class="prengi__header">Нет учета и контроля <br>обслуживания?</div>
+                </div>
+                <div class="prengi__icon">
+                    <img src="img/analysis.png" alt="" class="prengi__img">
+                    <div class="prengi__header">Сложно строить прогнозы и<br> анализировать данные?</div>
+                </div>
+            </div>
+            <img src="icons/arrow.png" alt="arrow" class="prengi__arrow">
+            <h1 class="prengi__title">С PRENGI</h1>
+            <div class="prengi__icons">
+                <div class="prengi__icon">
+                    <img src="img/expenses.png" alt="expenses" class="prengi__img">
+                    <div class="prengi__header">Все затраты спланированы<br>
+                        и расписаны</div>
+                </div>
+                <div class="prengi__icon">
+                    <img src="img/data.png" alt="data" class="prengi__img">
+                    <div class="prengi__header">Корректная аналитика данных<br> online</div>
+                </div>
+                <div class="prengi__icon">
+                    <img src="img/integration.png" alt="integration" class="prengi__img">
+                    <div class="prengi__header">Простая интеграция с любым<br> Вашим ПО</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="pk">
+        <div class="container">
+            <h2 class="pk__title">Prengi предоставляет экспертные решения<br>
+                для Вашей отрасли</h2>
+            <ur class="pk__links">
+                <li class="pk__item">
+                    <a  href="#" class="pk__link">Prengi Production </a>
+                </li>
+                <li class="pk__item">
+                    <a  href="#" class="pk__link">Prengi FMC</a>
+                </li>
+                <li class="pk__item">
+                    <a  href="#" class="pk__link">Prengi Mallz Retail</a>
+                </li>
+                <li class="pk__item">
+                    <a  href="#" class="pk__link">Prengi Logistic</a>
+                </li>
+                <li class="pk__item">
+                    <a  href="#" class="pk__link">Prengi IT</a>
+                </li>
+                <li class="pk__item">
+                    <a  href="#" class="pk__link">Prengi HR</a>
+                </li>  
+            </ur>
+            <div class="pk__icon">
+                <img src="icons/left.png" alt="left" class="pk__left" >
+                <img src="img/pc.png" alt="pk" class="pk__img">
+                <img src="icons/right.png" alt="right" class="pk__rigth">
+            </div>
+        </div>
+    </section>
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages__title">Преимущества Prengi для <br>Вашей отрасли</div>
+            <div class="advantages__icons">
+                <div class="advantages__icon">
+                    <img src="img/time.jpg" alt="time" class="advantages__img">
+                    <div class="advantages__subtitle">Возможность внедрения и<br> тестирования в реальном<br> времени</div>
+                </div>
+                <div class="advantages__icon">
+                    <img src="img/intellect.jpg" alt="intellect" class="advantages__img">
+                    <div class="advantages__subtitle">Система “Intellect”, учет уровня<br> доступов</div>
+                </div>
+                <div class="advantages__icon">
+                    <img src="img/world.jpg" alt="world" class="advantages__img">
+                    <div class="advantages__subtitle">Возможность использовать из<br> любой точки мира с любого<br> устройства</div>
+                </div>
+                <div class="advantages__icon">
+                    <img src="img/mobiles.jpg" alt="mobiles" class="advantages__img">
+                    <div class="advantages__subtitle">Нет необходимости установки<br>  и стационарной работы<br> программиста</div>
+                </div>
+                <div class="advantages__icon">
+                    <img src="img/business.jpg" alt="business" class="advantages__img">
+                    <div class="advantages__subtitle">“Живые” <br> бизнес-процессы</div>
+                </div>
+                <div class="advantages__icon">
+                    <img src="img/payment.jpg" alt="payment" class="advantages__img">
+                    <div class="advantages__subtitle">Никаких предоплат, оплата<br> 
+                        после старта</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="options">
+        <div class="container container_options">
+            <div class="options__wrappers">
+                <div class="options__title">Варианты развертывания Ваших данных</div>
+                <div class="options__wrapper">
+                    <div class="options__left">
+                        <div class="options__text">
+                            <div class="options__subtitle">Облачное хранилище</div>
+                            <div class="options__descrtitle">Это выделенное пользователю пространство на жестком диске сервера, находящегося в Интернете. </div>
+                        </div>
+                    </div>
+                    <div class="options__rigth">
+                        <div class="options__text">
+                            <div class="options__subtitle">Размещение не сервере</div>
+                            <div class="options__descrtitle">Услуга аренды пространства в центре обработки данных (колокация серверов) предназначена для клиентов </div>
+                            <div class="options__block_rigth"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="simply">
+        <div class="container">
+            <div class="simply__wrapper">
+                <img src="img/click.jpg" alt="click" class="simply__click">
+            </div>
+            <div class="simply__title">Приступить очень просто! Нужно получить доступ и начать работу!</div>
+            <button class="button button_simply">связаться с нами</button>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrappers">
+                <div class="footer__wrapper">
+                    <div class="footer__title">О компании</div>
+                    <img src="img/logo.png" alt="logo" class="footer__logo">
+                    <div class="footer__subtitle">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.
+                    Управление задачами</div>
+                </div>
+                <div class="footer__wrapper">
+                    <div class="footer__title">Модули</div>
+                    <div class="footer__link">
+                        <a href="#"> Обслуживани</a>
+                        <a href="#">Паспорт объекта</a>
+                        <a href="#">Автоматизация бизнес процессов (BPM)</a>
+                        <a href="#">Проектное управление (РРМ)</a>
+                        <a href="#">Управление подрядчиками</a>
+                        <a href="#"> Персональный дашборд</a>
+                        <a href="#"> Управление задачами</a>
+                        <a href="#">Управление алгоритмами</a>
+                        <a href="#"> Управление качеством</a>
+                        <a href="#">Склад</a>
+                        <a href="#"> Service desk</a>
+                        <a href="#"> Календарь</a>
+                        <a href="#"> Prengi market</a>
+                    </div>
+                </div>
+                <div class="footer__wrapper">
+                    <div class="footer__title">Отрасли</div>
+                    <div class="footer__link">
+                        <a href="#">Промышленность</a>
+                        <a href="#">Ритейл</a>
+                        <a href="#">Фасилити</a>
+                        <a href="#">Логистика</a>
+                        <a href="#">IT</a>
+                        <a href="#">HR</a>
+                    </div>
+                </div>
+                <div class="footer__wrapper">
+                    <div class="footer__title">О нас</div>
+                    <div class="footer__link">
+                        <a href="#">История</a>
+                        <a href="#">Наши отношения</a>
+                        <a href="#">Команда</a>
+                        <a href="#">Контакты</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__line"></div>
+            <div class="footer__descrtitle">© Prengi Ink. 2008-2017 Все права защищены.</div>
+        </div>
+    </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
